[gd_scene load_steps=5 format=3 uid="uid://dg2sr7g3mgbf7"]

[ext_resource type="Script" path="res://scenes/galaga_minigame/galaga_lvl/galaga_lvl.gd" id="1_cooxi"]
[ext_resource type="Texture2D" uid="uid://bn2hxi0dqxydw" path="res://assets/Galaga_Minigame/sprites/espacio.jpg" id="1_xo0id"]
[ext_resource type="PackedScene" uid="uid://k161j1ivoadr" path="res://scenes/galaga_minigame/player_galaga/player_galaga.tscn" id="2_jjqtd"]
[ext_resource type="PackedScene" uid="uid://c2jly8eh1vbjt" path="res://scenes/galaga_minigame/galaga_alien/galaga_alien.tscn" id="3_dxesq"]

[node name="GalagaLvl" type="Node2D"]
script = ExtResource("1_cooxi")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = -648.0
offset_right = 514.0
offset_bottom = -288.0
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_xo0id")
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = 0

[node name="PlayerGalaga" parent="." instance=ExtResource("2_jjqtd")]
position = Vector2(595, -72)
scale = Vector2(0.08, 0.08)

[node name="GalagaAlien" parent="." instance=ExtResource("3_dxesq")]
position = Vector2(587, -530)
scale = Vector2(0.075, 0.075)

[node name="EndingTimer" type="Timer" parent="."]
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="EndingTimer" to="." method="_on_ending_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
